# ftp

./: CMakeLists.txt  Dockerfile  client.cpp  main.cpp  passes  readme.md  run.sh  server.cpp  test.cpp
include/: blockstream.hpp  compressedstream.hpp  fdstream.hpp  io.hpp  server.hpp  streams.hpp  tools.hpp
